# skype-call-recorder

./: .gitignore  CMakeLists.txt  INSTALL  about.cpp  about.h  call.cpp  call.h  callgui.cpp  callgui.h  common.cpp  common.h  gui.cpp  gui.h  makeversion  mp3writer.cpp  mp3writer.h  preferences.cpp  preferences.h  recorder.cpp  recorder.h  resources.qrc  skype-call-recorder.control  skype-call-recorder.desktop  skype-call-recorder.pro  skype-call-recorder.spec  skype-dbus.cpp  skype-dbus.h  skype.cpp  skype.h  smartwidgets.h  trayicon.cpp  trayicon.h  uglyicon.xcf  utils.cpp  utils.h  vorbiswriter.cpp  vorbiswriter.h  wavewriter.cpp  wavewriter.h  writer.cpp  (+1 more)
CMakeModules/: Findid3.cmake  Findlame.cmake  Findvorbisenc.cmake
icon/: README
static/: .gitignore  README
utils/: build-dependencies  cmake-static  makedeb  makerpm  setup-ccache  snapshot  syncviewer
